:memo: Add espanol config